--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         midiChannel = ev.channel;
         midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
       };
-      // para enviar MIDI si somos el iniciador
+      // si somos ofertante, creamos canal MIDI
       midiChannel = connection.createDataChannel('midi');
       midiChannel.onmessage = ({ data }) => handleMidiMessage(JSON.parse(data));
       return connection;
@@ -372,7 +372,18 @@
     }
 
     function handleMidiMessage(msg) {
-      // reenviar a todos los dispositivos seleccionados
+      const [status, note, velocity] = msg.data;
+      const cmd = status & 0xf0;
+      // iluminar teclas
+      const noteName = window.PianoKeys.Frequency
+                        ? Tone.Frequency(note, 'midi').toNote()
+                        : null;
+      if (noteName && cmd === 0x90 && velocity > 0) {
+        piano.fillKey(noteName);
+      } else if (noteName && (cmd === 0x80 || (cmd === 0x90 && velocity === 0))) {
+        piano.clearKey(noteName);
+      }
+      // reenviar a dispositivos seleccionados
       selectedMidiOuts.forEach(dev => {
         dev.send(new Uint8Array(msg.data));
       });
