--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
       width: 100%; max-width: 700px;
       height: 150px; margin: 1.5em auto; margin-bottom: -10px;
     }
+    .midi-section select {
+  padding: .4em;
+  font-size: 0.8em;
+}
   </style>
 </head>
 <body>
