--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
       height: 150px; margin: 1.5em auto; margin-bottom: -10px;
     }
     .midi-section select {
-  padding: .4em;
-  font-size: 0.8em;
-}
+      padding: .4em;
+      font-size: 0.8em;
+    }
   </style>
 </head>
 <body>
@@ -334,7 +334,6 @@
           opt.textContent = o.name;
           midiOutSelect.appendChild(opt);
         });
-        // ajustar tamaño vertical con size
         midiOutSelect.size = Math.min(midiOutputs.length, 4);
         midiOutSelect.onchange = () => {
           selectedMidiOuts = Array.from(midiOutSelect.selectedOptions)
@@ -343,12 +342,17 @@
             ? `MIDI OUT: ${selectedMidiOuts.map(d=>d.name).join(', ')}`
             : '';
         };
+        // Si solo hay una salida, sélectionalo automáticamente
+        if (midiOutputs.length === 1) {
+          midiOutSelect.options[0].selected = true;
+          midiOutSelect.onchange();
+        }
       } else {
         midiOutSelect.innerHTML = '<option>(No hay salidas MIDI)</option>';
         midiOutSelect.size = 1;
       }
 
-      // Entradas MIDI
+      // Entradas MIDI (única selección)
       midiInSelectCont.innerHTML = '';
       if (midiInputs.length) {
         const selIn = document.createElement('select');
@@ -371,6 +375,11 @@
           }
         };
         midiInSelectCont.appendChild(selIn);
+        // Si solo hay una entrada, selección automática
+        if (midiInputs.length === 1) {
+          selIn.value = '0';
+          selIn.onchange();
+        }
       } else {
         midiInSelectCont.textContent = '(No hay entradas MIDI físicas conectadas)';
       }
